# Enigma

./: README.md
first-year/: README.md
first-year/Bloc notes - supports/: Chapitre Fonctions usuelles - enigma.docx  Film.txt  Présentation.pptx  Qualités.docx  Video games - Copy.docx  Ziyad @ Établissement scolaire.url  ateliers drivers.docx  speech anglias.docx
first-year/c/CoursExample30112023deck/: CMakeLists.txt  deck.c  deck.h  main.c
first-year/c/card_game/: CMakeLists.txt  Deck.cpp  Game.c  Game.h  deck.c  deck.h  main.c
first-year/c/casseBrique/: CMakeLists.txt  Game.c  Game.h  keyboardinput.c  keyboardinput.h  mainMenu.c  mainMenu.c~  mainMenu.h
first-year/c/hellosdl/: main.c
first-year/c/hellosdl2 - Copie/: CMakeLists.txt  main.c
first-year/c/morpioncorriger/: main.c
first-year/c/palindrome/: CMakeLists.txt  Palindrome.c  Palindrome.h  main.c
first-year/c/puissance4/: CMakeLists.txt  main.c
first-year/c/scanf/: CMakeLists.txt  main.c
first-year/c/spaceinvader/: CMakeLists.txt  Game.c  Game.h  Mainmenu.c  Mainmenu.h  main.c  rock.c  rock.h  spaceship.c  spaceship.h
first-year/c/tictactoe/: CMakeLists.txt  main.c
first-year/c/toupper/: CMakeLists.txt  main.c
first-year/c/untitled/: main.c
first-year/c/untitled1/: CMakeLists.txt  deck.c  deck.h  main.c
first-year/green_it/: package-lock.json
first-year/green_it/cv/: package-lock.json
first-year/html/Convertisseur/: Convertisseur.js
first-year/html/Convertisseur-main/: Calculator.js  Design.css  index.html
first-year/html/ableton/: index.html
first-year/html/day 1/: audio.html  contact.html  index.html  planning.html  planning2.html  (+1 more)
first-year/infographie/: Plaqutte Enigma.indd
first-year/javascript/: package-lock.json
first-year/secu_iot/: 1.py  4.1.1.3_Ziyad.docx  4.1.1.6 Ziyad.docx  4.1.3.4_Ziyad.docx
html/: acceuil.html
html/test/: index.js
second_year/English/: IT exercise .docx
second_year/SEO/: Cas pratique SEO SEA Webmarketing - Cas Audience Ninja - 2A 2024 2025.pptx
second_year/arduino/: moveLED.cpp
second_year/note/: QuestionnaireMarcelProust.doc  pres Nathan.docx  presentation.docx
second_year/php/: cours_php.sql
(+159 files in other folders)
